--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Hwang Home</title>
 </head>
 <body>
-홈페이지 방문을 환영합니다.
+<h2>과제</h2>
+<ol>
+    <li><a href="HW01.html">과제 1</a></li>
+</ol>
 </body>
 </html>
