이미지를 이용한 동적 처리

--- a/tab/lab02.html
+++ b/tab/lab02.html
@@ -13,9 +13,9 @@
 </style>
 <script>
     function show(){//<img>에 이미지 달기
-        document.getElementById("flg").scr="images/Elvis Presley.jpg"}
+        document.getElementById("fig").scr="images/Elvis Presley.jpg"}
     function hide(){//<img>에  이미지 제거
-        document.getElementById("flg").scr="";}
+        document.getElementById("fig").scr="";}
 </script>
 </head>
 <body>
