과제 파일에 저장

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <h2>과제</h2>
 <ol>
-    <li><a href="HW01.html">과제 1</a></li>
-    <li><a href="HW02.html">과제 1</a></li>
+    <li><a href="lab/reports/HW01.html">과제 1</a></li>
+    <li><a href="lab/reports/HW02.html">과제 1</a></li>
 </ol>
 </body>
 </html>
