--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="lab/reports/HW01.html">과제 1</a></li>
     <li><a href="lab/reports/HW02.html">과제 2</a></li>
     <li><a href="lab/reports/HW03_01.html">과제 3</a></li>
+    <li><a href="lab/reports/HW04.html">과제 4</a></li>
 </ol>
 </body>
 </html>
