템플릿 저장

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="lab/reports/HW02.html">과제 2</a></li>
     <li><a href="lab/reports/HW03_01.html">과제 3</a></li>
     <li><a href="lab/reports/HW04.html">과제 4</a></li>
+    <li><a href="lab/reports/Yummy/Yummy/index.html">개인 웹사이트 개발 Term Project</a></li>
 </ol>
 </body>
 </html>
