--- a/lab/reports/HW03_01.html
+++ b/lab/reports/HW03_01.html
@@ -7,7 +7,9 @@
         function number(n) {
             var m = parseInt(n);
             var S = parseInt(m, 2);
-            var H = parseInt(S, 16);
+            var H = S.toString(16);
+
+
 
             document.write(H);
         }
