--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#menu">맛집</a></li>
           <li><a href="#testimonials">카페</a></li>
           <li><a href="#chefs">디저트</a></li>
-          <li><a href="#gallery">추천</a></li>
+          <li><a href="#book-a-table">추천</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -556,7 +556,7 @@
                   <div class="validate"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
-                  <input type="text" class="form-control" name="menu" id="restaurant menu" placeholder="Restaurant menu" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                  <input type="text" class="form-control" name="menu" id="restaurant menu" placeholder="menu" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
                   <div class="validate"></div>
                 </div>
               </div>
