--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-# http://localhost:63342/Myweb/lab/reports/Yummy/Yummy/index.html?_ijt=nubjc3i54bt7s2ni4veq3qog2o
+#  http://localhost:63342/Myweb/lab/reports/Yummy/Yummy/index.html?_ijt=nubjc3i54bt7s2ni4veq3qog2o
 
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,7 @@
         </ul>
       </nav><!-- .navbar -->
 
-      <a class="btn-book-a-table" href="#book-a-table">Book a Table</a>
+      <a class="btn-book-a-table" href="#book-a-table">recommend</a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
