--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-#  http://localhost:63342/Myweb/lab/reports/Yummy/Yummy/index.html?_ijt=nubjc3i54bt7s2ni4veq3qog2o
+#  탬플릿: http://localhost:63342/Myweb/lab/reports/Yummy/Yummy/index.html?_ijt=nubjc3i54bt7s2ni4veq3qog2o
 
 <head>
   <meta charset="utf-8">
